bindings/dart/search_simpli/lib/src/bindings_generated.dart

// Generated by `dart run ffigen --config ffigen.yaml`. Do not edit by hand.
// ignore_for_file: always_specify_types, camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Generated FFI bindings for search_simpli.h (Search Simpli's C ABI). Do not edit by hand; see ffigen.yaml.
///
class SearchSimpliBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  SearchSimpliBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  SearchSimpliBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// The engine contract/build version (contracts/CONTRACTS_VERSION), e.g.
  /// "1.0.0". The returned pointer is static storage owned by the library:
  /// never pass it to ss_free(). Cannot fail.
  ffi.Pointer<ffi.Char> ss_version() {
    return _ss_version();
  }

  late final _ss_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'ss_version');
  late final _ss_version =
      _ss_versionPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// A thread-local, null-terminated description of the most recent ss_*
  /// failure on the calling thread ("" if there has been none yet, or after a
  /// call that succeeded does not update it — check the failing call's own
  /// return value first). Valid until this thread's next failing ss_* call.
  /// The returned pointer is thread-local static storage: never pass it to
  /// ss_free(). Cannot fail.
  ffi.Pointer<ffi.Char> ss_last_error() {
    return _ss_last_error();
  }

  late final _ss_last_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'ss_last_error');
  late final _ss_last_error =
      _ss_last_errorPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// Open the published snapshot directory at `dir_path` (a null-terminated
  /// path, absolute or relative to the process's current directory) and decode
  /// its current generation into freshly allocated workspaces.
  ///
  /// Returns an opaque handle on success, or NULL on any I/O or validation
  /// failure (missing/corrupt MANIFEST, checksum mismatch, cross-section count
  /// mismatch, out of memory, ...) — see ss_last_error().
  ffi.Pointer<ss_handle> ss_open(
    ffi.Pointer<ffi.Char> dir_path,
  ) {
    return _ss_open(
      dir_path,
    );
  }

  late final _ss_openPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ss_handle> Function(ffi.Pointer<ffi.Char>)>>('ss_open');
  late final _ss_open = _ss_openPtr
      .asFunction<ffi.Pointer<ss_handle> Function(ffi.Pointer<ffi.Char>)>();

  /// Free everything ss_open() allocated for `handle`. `handle` may be NULL
  /// (no-op). Do not call any other ss_* function with `handle` afterward, and
  /// do not call ss_close() twice on the same handle.
  void ss_close(
    ffi.Pointer<ss_handle> handle,
  ) {
    return _ss_close(
      handle,
    );
  }

  late final _ss_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ss_handle>)>>(
          'ss_close');
  late final _ss_close =
      _ss_closePtr.asFunction<void Function(ffi.Pointer<ss_handle>)>();

  /// Snapshot status as a JSON object: `ready` (bool, always true for a
  /// successfully opened handle), `generation`, `analyzer_id`,
  /// `embedding_model_id`, `vector_dimensions`, `documents`, `terms`,
  /// `postings`.
  ///
  /// Returns a heap-allocated, null-terminated JSON string on success — the
  /// caller must free it with ss_free() — or NULL on failure (out of memory;
  /// see ss_last_error()). `handle` must not be NULL.
  ffi.Pointer<ffi.Char> ss_status(
    ffi.Pointer<ss_handle> handle,
  ) {
    return _ss_status(
      handle,
    );
  }

  late final _ss_statusPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ss_handle>)>>('ss_status');
  late final _ss_status = _ss_statusPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ss_handle>)>();

  /// Run one query against `handle`'s snapshot.
  ///
  /// query_text    Null-terminated UTF-8 query text. Must not be empty.
  /// query_vector  Array of `dims` 32-bit floats, or NULL when `dims` is 0.
  /// Ignored entirely for retrieval_mode "lexical" and for
  /// snapshots with zero vector dimensions (see ss_status()).
  /// Otherwise `dims` must equal the snapshot's vector
  /// dimensions and every element must be finite, or this call
  /// fails.
  /// dims          Length of `query_vector`.
  /// top_k         Final result count, 1-100.
  /// options_json  NULL or "" for defaults, or a null-terminated JSON object
  /// with any of:
  /// "retrieval_mode"    "lexical" | "vector" | "hybrid"
  /// (default "hybrid")
  /// "candidate_k"       integer, default 100, must be
  /// >= top_k and <= 10000
  /// "path_prefix"       string, restricts results to chunks
  /// whose path starts with this prefix
  /// "principal_labels"  array of strings; a chunk is only
  /// returned if the caller holds every
  /// one of its required labels (see
  /// docs/authorization.md)
  ///
  /// Returns a heap-allocated, null-terminated JSON object on success — the
  /// caller must free it with ss_free() — with fields `tool`, `query`, `index`,
  /// `retrieval`, `results` (array of chunk_id/citation/content/score/ranking),
  /// and `answer_policy`. This is exactly the `result` value a `search_knowledge`
  /// JSON-RPC response carries for the same request (docs/zig-rpc-service.md).
  ///
  /// Returns NULL on failure — invalid top_k/candidate_k, a wrong-sized or
  /// non-finite query_vector, malformed options_json, or an unknown
  /// retrieval_mode — see ss_last_error(). `handle` must not be NULL.
  ffi.Pointer<ffi.Char> ss_query(
    ffi.Pointer<ss_handle> handle,
    ffi.Pointer<ffi.Char> query_text,
    ffi.Pointer<ffi.Float> query_vector,
    int dims,
    int top_k,
    ffi.Pointer<ffi.Char> options_json,
  ) {
    return _ss_query(
      handle,
      query_text,
      query_vector,
      dims,
      top_k,
      options_json,
    );
  }

  late final _ss_queryPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ss_handle>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Float>,
              ffi.Size,
              ffi.Size,
              ffi.Pointer<ffi.Char>)>>('ss_query');
  late final _ss_query = _ss_queryPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ss_handle>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Float>,
          int,
          int,
          ffi.Pointer<ffi.Char>)>();

  /// Look up stored chunks by id. `ids_json` is a null-terminated JSON object:
  ///
  /// {"ids": ["chunk-1", "chunk-2"], "path_prefix": "guides/",
  /// "principal_labels": []}
  ///
  /// `path_prefix` and `principal_labels` are optional and have the same
  /// meaning as `read_chunk`'s parameters of the same name.
  ///
  /// Returns a heap-allocated, null-terminated JSON array on success — the
  /// caller must free it with ss_free() — with one entry per id, in the same
  /// order as `ids`: a chunk object (`chunk_id`, `citation` {path, start_line,
  /// end_line}, `content`) when found and authorized, or
  /// `{"chunk_id": "...", "found": false}` otherwise. Ids are never rejected
  /// individually; the whole call only fails (returns NULL) if `ids_json`
  /// itself is malformed, `ids` is missing, or of out of memory — see
  /// ss_last_error(). `handle` must not be NULL.
  ffi.Pointer<ffi.Char> ss_evidence(
    ffi.Pointer<ss_handle> handle,
    ffi.Pointer<ffi.Char> ids_json,
  ) {
    return _ss_evidence(
      handle,
      ids_json,
    );
  }

  late final _ss_evidencePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ss_handle>, ffi.Pointer<ffi.Char>)>>('ss_evidence');
  late final _ss_evidence = _ss_evidencePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ss_handle>, ffi.Pointer<ffi.Char>)>();

  /// Validate the neutral interchange JSON in bytes[0..bytes_len]
  /// (contracts/snapshot-interchange.schema.json) and atomically publish it as
  /// a new generation under `dir_path` (created, including parent directories,
  /// if it does not already exist) — exactly what `searchd import-json` does.
  ///
  /// Returns the published generation number (>= 1) on success, or a negative
  /// ss_error_code (SS_ERR_* above) on failure — see ss_last_error() for the
  /// specific reason (e.g. unsupported analyzer/format version, inconsistent
  /// vector dimensions, a document missing its id/path, or an I/O error).
  int ss_import_json(
    ffi.Pointer<ffi.Char> dir_path,
    ffi.Pointer<ffi.Char> bytes,
    int bytes_len,
  ) {
    return _ss_import_json(
      dir_path,
      bytes,
      bytes_len,
    );
  }

  late final _ss_import_jsonPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int64 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Size)>>('ss_import_json');
  late final _ss_import_json = _ss_import_jsonPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  /// Free a pointer previously returned by ss_status(), ss_query(), or
  /// ss_evidence(). `ptr` may be NULL (no-op). Never call this on the result
  /// of ss_version() or ss_last_error() (both static storage, not caller-owned).
  void ss_free(
    ffi.Pointer<ffi.Char> ptr,
  ) {
    return _ss_free(
      ptr,
    );
  }

  late final _ss_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'ss_free');
  late final _ss_free =
      _ss_freePtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();
}

final class ss_handle extends ffi.Opaque {}

const int SS_ERR_INVALID_ARGUMENT = -1;

const int SS_ERR_IO = -2;

const int SS_ERR_CORRUPT_SNAPSHOT = -3;

const int SS_ERR_CAPACITY = -4;

const int SS_ERR_OUT_OF_MEMORY = -5;

const int SS_ERR_NOT_FOUND = -6;

const int SS_ERR_INTERNAL = -7;
